--- a/style.css
+++ b/style.css
@@ -55,4 +55,15 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    /* Mobile optimizations */
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: none;
+    overscroll-behavior: none;
+}
+
+#game {
+    touch-action: none;
+    cursor: pointer;
 }
